--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asyncpg>=0.27.0,<0.31.0
 pydantic[email]==1.10.2
 httpx==0.24.1
 python-dotenv==0.21.0
+bcrypt==4.0.1
 passlib[bcrypt]==1.7.4
 python-jose==3.3.0
 alembic==1.10.2
@@ -13,3 +14,8 @@ pytest-asyncio==0.20.3
 pytest-mock==3.10.0
 redis>=4.5.0
 gunicorn[uvicorn]==20.1.0
+strawberry-graphql==0.255.0
+aio-pika==9.5.2
+loguru==0.7.3
+email_validator==2.2.0
+aiosqlite==0.21.0
