--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,17 @@
+# =============================
 # DATABASE CONFIGURATION
+# =============================
 
 # Formato: postgresql+asyncpg://<USUARIO>:<SENHA>@<HOST>:<PORTA>/<NOME_DO_BANCO>
 DATABASE_URL=postgresql+asyncpg://user:pass@db:5432/aiqfome
 
 
+# =============================
 # SECURITY CONFIGURATION
+# =============================
 
-# Chave secreta usada para assinar os tokens JWT (gere uma nova com: python -c "import secrets; print(secrets.token_hex(32))")
+# Chave secreta usada para assinar os tokens JWT
+# Gere uma nova com: python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY=your_new_generated_secret_key_here
 
 # Tempo de expiração do token JWT em minutos
@@ -14,3 +19,14 @@ TOKEN_EXPIRE_MINUTES=30
 
 # Algoritmo de criptografia usado pelo JWT
 ALGORITHM=HS256
+
+
+# =============================
+# RABBITMQ CONFIGURATION
+# =============================
+
+# URL de conexão AMQP
+RABBITMQ_URL=amqp://guest:guest@rabbitmq/
+
+# Nome da fila de favoritos
+QUEUE_NAME=favorites_queue
